tests/invalid_submodules/sub_visibility_a3.err_exp2
sub_visibility_a3.m:020: In the first argument of function symbol `int_uq' of
sub_visibility_a3.m:020:   the type `int_uq'/0:
sub_visibility_a3.m:020:   error: the type [38;5;87m`foo'/0[39;49m is [38;5;203mundefined.[39;49m
sub_visibility_a3.m:020:   (The module [38;5;87m`sub_visibility_a3.sub2'[39;49m [38;5;203mhas not been[39;49m
sub_visibility_a3.m:020:   [38;5;203mimported in the interface.)[39;49m
sub_visibility_a3.m:021: In the first argument of function symbol `int_fq' of
sub_visibility_a3.m:021:   the type `int_fq'/0:
sub_visibility_a3.m:021:   error: the type [38;5;87m`sub_visibility_a3.sub2.foo'/0[39;49m is
sub_visibility_a3.m:021:   [38;5;203mundefined.[39;49m
sub_visibility_a3.m:021:   (The module [38;5;87m`sub_visibility_a3.sub2'[39;49m [38;5;203mhas not been[39;49m
sub_visibility_a3.m:021:   [38;5;203mimported in the interface.)[39;49m
`Mercury/ints/sub_visibility_a3.sub1.int' and
  `Mercury/int2s/sub_visibility_a3.sub1.int2' not written.
